Changed base.html jinja

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,6 +7,6 @@
     <title>My Portfolio</title>
     {% block head %}{% endblock %}
   </head>
-
+  {% block body %}{% endblock %}
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </html>
